# curseforge-api-wrapper

./: .env  Cargo.toml
examples/: basic.rs
src/: errors.rs  lib.rs
src/api/: category.rs  client.rs  mod.rs  project.rs  search.rs
src/models/: category.rs  file.rs  fingerprint.rs  game.rs  mod.rs  project.rs  search.rs
