[package]
name = "curseforge-api-wrapper"
version = "0.1.0"
edition = "2021"
authors = ["STierProgrammer"]
description = "Rust wrapper for the official CurseForge API"
repository = "https://github.com/SynthLauncher/curseforge-api-wrapper"
license = "MIT"
keywords = ["curseforge", "minecraft", "mods", "api", "wrapper"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures-util = "0.3"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
